RESOLVED FIXED 214622
Fix validation of deleted WebGL objects
https://bugs.webkit.org/show_bug.cgi?id=214622
Summary Fix validation of deleted WebGL objects
James Darpinian
Reported 2020-07-21 17:08:58 PDT
Fix validation of deleted WebGL objects
Attachments
Patch (19.17 KB, patch)
2020-07-21 17:10 PDT, James Darpinian
no flags
James Darpinian
Comment 1 2020-07-21 17:10:53 PDT
James Darpinian
Comment 2 2020-07-21 17:12:28 PDT
I discovered this while looking at conformance tests for query objects (bug 126940).
Kenneth Russell
Comment 3 2020-07-21 17:23:21 PDT
Comment on attachment 404882 [details] Patch Looks good to me. Good catch. Do you think we should bring over two additional concepts from Chromium's WebGL implementation? - WebGLObject::MarkedForDeletion - WebGLRenderingContextBase::ValidateNullableWebGLObject ? Maybe not in this patch, but in a follow-on one?
James Darpinian
Comment 4 2020-07-21 17:29:26 PDT
Yes, I think there's more work to be done here.
Kenneth Russell
Comment 5 2020-07-21 17:40:43 PDT
Thanks, sounds good. This individual patch LGTM - let's file follow-on bugs.
EWS
Comment 6 2020-07-22 11:25:48 PDT
Committed r264713: <https://trac.webkit.org/changeset/264713> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404882 [details].
Radar WebKit Bug Importer
Comment 7 2020-07-22 11:26:23 PDT
Note You need to log in before you can comment on or make changes to this bug.